--- a/SustainSync/docker-compose.yml
+++ b/SustainSync/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     environment:
       - OLLAMA_HOST=ollama
       - OLLAMA_PORT=11434
+      - BILLS_CSV=/app/data/billdata.csv
     depends_on:
       - db
     ports:
